<resources>
    <string name="app_name">Bystander</string>
    <string name="accountString">Choose account</string>
    <string name="takeVidButtonText">Take video!</string>
    <string name="broadcastString">Broadcast!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="main_description"><html><p>Record what you \n<i>witness</i>\n and <b>share</b> at the touch of a button.</p></html></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable automatic upload</string>
    <string name="pref_description_social_recommendations"> Do you want to automatically upload videos
        to YouTube?
    </string>

    <string name="pref_title_display_name"> Your State</string>
    <string name="pref_default_display_name">Alabama</string>

    <string name="pref_title_add_friends_to_messages">Your State</string>
    <string-array name="pref_example_list_titles">
        <item>Alabama</item>
        <item>Alaska</item>
        <item> Arizona
         </item>
        <item> Arkansas
         </item>
        <item> California
         </item>
        <item> Colorado
         </item>
        <item> Connecticut
         </item>
        <item> Delaware
         </item>
        <item> Florida
         </item>
        <item> Georgia
         </item>
        <item> Hawaii
         </item>
        <item> Idaho
         </item>
        <item> Illinois
         </item>
        <item> Indiana
         </item>
        <item> Iowa
         </item>
        <item> Kansas
         </item>
        <item> Kentucky
         </item>
        <item> Louisiana
         </item>
        <item> Maine
         </item>
        <item> Maryland
         </item>
        <item> Massachusetts
         </item>
        <item> Michigan
         </item>
        <item> Minnesota
         </item>
        <item> Mississippi
         </item>
        <item> Missouri
         </item>
        <item> Montana
         </item>
        <item> Nebraska
         </item>
        <item> Nevada
         </item>
        <item> New Hampshire
         </item>
        <item> New Jersey
         </item>
        <item> New Mexico
         </item>
        <item> New York
         </item>
        <item> North Carolina
         </item>
        <item> North Dakota
         </item>
        <item> Ohio
         </item>
        <item> Oklahoma
         </item>
        <item> Oregon
         </item>
        <item> Pennsylvania
         </item>
        <item> Rhode Island
         </item>
        <item> South Carolina
         </item>
        <item> South Dakota
         </item>
        <item> Tennessee
         </item>
        <item> Texas
         </item>
        <item> Utah
         </item>
        <item> Vermont
         </item>
        <item> Virginia
         </item>
        <item> Washington
         </item>
        <item> West Virginia
         </item>
        <item> Wisconsin
         </item>
        <item> Wyoming
         </item>

    </string-array>
    <string-array name="pref_example_list_values">
        <item> 0 </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
    </string-array>

    <string-array name="privacySettings">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string-array name="privacySettingsValues">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="gmailAccount">Gmail Account</string>
    <string name="yourAccount">Your Account</string>
    <string name="addgmailpreference">addgmail</string>
    <string name="broadcastprivacy">broadcastprivacy</string>
    <string name="rightsTextViewString">Rights not found. Please check your settings.</string>
    <string name="user_name">User Name: %1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="view_rights">View Rights</string>
    <string name="choose_state">Choose Another State</string>
    <string name="use_location">Use Your Location</string>
    <string name="sign_out">Sign Out</string>
</resources>
