<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:key="add_gmail"
        android:title="@string/gmailAccount"
        android:defaultValue="@string/yourAccount"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/broadcastprivacy"
        android:title="Broadcast Privacy"
        android:defaultValue="-1"
        android:entries="@array/privacySettings"
        android:entryValues="@array/privacySettingsValues"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
     design guidelines. -->
    <Preference
        android:title="addgmail"
        android:key="addgmailpreference"
        android:enabled="true">
    </Preference>



</PreferenceScreen>
