<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="User Info">

        <Preference
            android:key="signin"
            android:title="Manage Google Account"
            android:enabled="true" />

        <ListPreference
            android:key="State"
            android:title="@string/pref_title_display_name"
            android:summary="%s"
            android:dialogTitle="Your State"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:defaultValue="Alabama" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Upload Settings">
        <SwitchPreference
            android:key="example_switch"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_description_social_recommendations"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="broadcast"
            android:title="Upload Privacy"
            android:summary="Want to make your uploads public?"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="use_speech"
            android:title="Speech to Text"
            android:summary="Use speech to text for video description?"
            android:defaultValue="true"/>
    </PreferenceCategory>


</PreferenceScreen>