<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/record_layout"
    tools:context="com.cs495.bystander.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeVidButtonText"
        android:id="@+id/takeVideoButton"
        android:onClick="takeVideo"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountString"
        android:id="@+id/account"
        android:onClick="pickAccount"
        android:layout_alignTop="@+id/takeVideoButton"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcastString"
        android:onClick="makeYouTube"
        android:id="@+id/BroadcastButton"
        android:layout_below="@+id/takeVideoButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical" />
</RelativeLayout>
