<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs495.bystander.SignInActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:key="addgmailpreference"
        android:enabled="true">
    </com.google.android.gms.common.SignInButton>

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"

            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/emailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_out"/>

    </LinearLayout>

</RelativeLayout>
